--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.0.1",
     "main": "index.js",
     "scripts": {
+        "start": "node index.js",
+        "server": "nodemon index.js",
         "test": "cross-env NODE_ENV=testing jest --watchAll --verbose --runInBand --silent",
         "resetdb": "knex migrate:rollback && knex migrate:latest && knex seed:run"
     },
@@ -14,7 +16,6 @@
         "express": "4.17.1",
         "helmet": "4.6.0",
         "knex": "0.95.9",
-        "resolve-url": "^0.2.1",
         "sqlite3": "5.0.2"
     },
     "devDependencies": {
@@ -22,7 +23,6 @@
         "eslint": "7.32.0",
         "jest": "26.6.3",
         "knex-cleaner": "1.3.1",
-        "nodemon": "^2.0.12",
         "supertest": "6.1.4"
     },
     "license": "ISC"
